fix(ColorBox): fixed copy animation on mobile

--- a/components/ColorBox/ColorBox.module.scss
+++ b/components/ColorBox/ColorBox.module.scss
@@ -16,7 +16,7 @@
         &.active{
             opacity: 1;
             z-index: 10;
-            transform: scale(10);
+            transform: scale(50);
         }
         &.hidden{
             opacity: 0;
